--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,14 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Project name: Swayamvara
 
-Things you may want to cover:
+Rails Backend: JSON based REST API 
 
-* Ruby version
+Project Start Date: 25 Jan 2015
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+Description: TBA 
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+
+
+ 
